--- a/cx20/GfTd/index.html
+++ b/cx20/GfTd/index.html
@@ -13,7 +13,7 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/24bcdc61/libs/claygl/20180118/claygl.js"></script> -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/92449a65/libs/claygl/1.1.2/claygl.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/claygl/1.1.2/claygl.js"></script>
 <script src="https://unpkg.com/oimo"></script>
 
 <canvas id="main" width="465" height="465"></canvas>
