--- a/cx20/6whX/index.html
+++ b/cx20/6whX/index.html
@@ -16,8 +16,8 @@
 <script src="https://cx20.github.io/gltf-test/libs/Hilo3d/1.5.9/Hilo3d.js"></script>
 <script src="https://cx20.github.io/gltf-test/libs/Hilo3d/1.5.9/OrbitControls.js"></script>
 -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/23afd9fd/libs/Hilo3d/1.5.14/Hilo3d.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/23afd9fd/libs/Hilo3d/1.5.14/OrbitControls.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/Hilo3d/1.5.14/Hilo3d.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/Hilo3d/1.5.14/OrbitControls.js"></script>
 
 <div id='loading'>loading 0% ...</div>
 <div id="container"></div>
