--- a/cx20/QQzB/index.html
+++ b/cx20/QQzB/index.html
@@ -13,12 +13,11 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- playcanvas.js v1.6.0dev -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/a63d4941/libs/playcanvas/v1.6.0-dev/playcanvas-latest.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/playcanvas/v1.6.0-dev/playcanvas-latest.js"></script>
 
 <!-- gltf-loader.js -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/a63d4941/libs/playcanvas/v1.6.0-dev/playcanvas-gltf.js"></script>
-<!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/a63d4941/libs/playcanvas/v1.6.0-dev/orbit-camera.js"></script> -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/a63d4941/libs/playcanvas/v1.6.0-dev/playcanvas-anim.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/playcanvas/v1.6.0-dev/playcanvas-gltf.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/playcanvas/v1.6.0-dev/playcanvas-anim.js"></script>
 
 <!-- The canvas element -->
 <canvas id="application"></canvas>
