--- a/cx20/SgVT/index.html
+++ b/cx20/SgVT/index.html
@@ -14,11 +14,11 @@
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- playcanvas.js -->
 <!--
-<script src="https://cdn.rawgit.com/cx20/gltf-test/a63d4941/libs/playcanvas/v1.6.0-dev/playcanvas-latest.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/a63d4941/libs/playcanvas/v1.6.0-dev/draco_decoder.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/a63d4941/libs/playcanvas/v1.6.0-dev/playcanvas-anim.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/a63d4941/libs/playcanvas/v1.6.0-dev/playcanvas-gltf.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/a63d4941/libs/playcanvas/v1.6.0-dev/orbit-camera.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/playcanvas/v1.6.0-dev/playcanvas-latest.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/playcanvas/v1.6.0-dev/draco_decoder.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/playcanvas/v1.6.0-dev/playcanvas-anim.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/playcanvas/v1.6.0-dev/playcanvas-gltf.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/playcanvas/v1.6.0-dev/orbit-camera.js"></script>
 -->
 <script src="https://cdn.rawgit.com/cx20/gltf-test/851b28dc/libs/playcanvas/v1.6.4-dev/playcanvas-latest.js"></script>
 <script src="https://cdn.rawgit.com/cx20/gltf-test/851b28dc/libs/playcanvas/v1.6.4-dev/draco_decoder.js"></script>
