--- a/cx20/cYlz/index.html
+++ b/cx20/cYlz/index.html
@@ -15,7 +15,7 @@
 <!-- Cesium.js v1.36 -->
 <!-- <script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/cesium/1.36/Cesium.js"></script> -->
 <!-- Cesium.js v1.41 -->
-<!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/23afd9fd/libs/cesium/1.41/Cesium.js"></script> -->
+<!-- <script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/cesium/1.41/Cesium.js"></script> -->
 <!-- Cesium.js v1.43 -->
 <!-- <script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/cesium/1.43/Cesium.js"></script> -->
 <!-- Cesium.js v1.44 -->
