--- a/cx20/icRh/index.html
+++ b/cx20/icRh/index.html
@@ -17,8 +17,8 @@
 <script src="https://cx20.github.io/gltf-test/libs/Hilo3d/1.5.9/OrbitControls.js"></script>
 -->
 <!--
-<script src="https://cdn.rawgit.com/cx20/gltf-test/23afd9fd/libs/Hilo3d/1.5.14/Hilo3d.js"></script>
-<script src="https://cdn.rawgit.com/cx20/gltf-test/23afd9fd/libs/Hilo3d/1.5.14/OrbitControls.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/Hilo3d/1.5.14/Hilo3d.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/Hilo3d/1.5.14/OrbitControls.js"></script>
 -->
 <script src="https://cdn.rawgit.com/cx20/gltf-test/e44309cd/libs/Hilo3d/1.5.58/Hilo3d.js"></script>
 <script src="https://cdn.rawgit.com/cx20/gltf-test/e44309cd/libs/Hilo3d/1.5.58/OrbitControls.js"></script>
