--- a/cx20/0S4u/index.html
+++ b/cx20/0S4u/index.html
@@ -13,7 +13,7 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- glboost.js r3-dev -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/b53ad1f65b563bf6ff1162bcfebf4a538c23d512/libs/glboost/r3dev/glboost.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/glboost/r3dev/glboost.js"></script>
 
 <!-- oimo.js -->
 <script src="https://unpkg.com/oimo"></script>
