--- a/cx20/aGqk/index.html
+++ b/cx20/aGqk/index.html
@@ -17,12 +17,12 @@
 <!-- babylon.js v3.1 alpha -->
 <!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/d25b5dba8e707eaeda208997f8a8a6f874506a21/libs/babylonjs/3.1.0dev/babylon.max.js"></script> -->
 <!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/69403be5177b5aaad3dc5c818e71e8e3bd56b8a8/libs/babylonjs/3.1.0dev/babylon.max.js"></script> -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/0e29abe89c9bbe63cd8cb75d0645e27f6d21eaa1/libs/babylonjs/3.1.0dev/babylon.max.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.1.0dev/babylon.max.js"></script>
 
 <!-- babylon.glTFFileLoader.js -->
 <!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/d25b5dba8e707eaeda208997f8a8a6f874506a21/libs/babylonjs/3.1.0dev/babylon.glTF2FileLoader.js"></script> -->
 <!-- <script src="https://cdn.rawgit.com/cx20/gltf-test/69403be5177b5aaad3dc5c818e71e8e3bd56b8a8/libs/babylonjs/3.1.0dev/babylon.glTF2FileLoader.js"></script> -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/0e29abe89c9bbe63cd8cb75d0645e27f6d21eaa1/libs/babylonjs/3.1.0dev/babylon.glTF2FileLoader.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.1.0dev/babylon.glTF2FileLoader.js"></script>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
