--- a/cx20/ajqm/index.html
+++ b/cx20/ajqm/index.html
@@ -15,10 +15,10 @@
 <canvas id="renderCanvas"></canvas>
 
 <!-- babylon.js v3.2 -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/d390423c/libs/babylonjs/3.3.0dev/babylon.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.3.0dev/babylon.js"></script>
 
 <!-- babylon.glTF2FileLoader.js -->
-<script src="https://cdn.rawgit.com/cx20/gltf-test/d390423c/libs/babylonjs/3.3.0dev/babylon.glTF2FileLoader.js"></script>
+<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.3.0dev/babylon.glTF2FileLoader.js"></script>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
