--- a/cx20/Gl5H/index.html
+++ b/cx20/Gl5H/index.html
@@ -13,7 +13,7 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- babylon.js v3.3 -->
-<!-- <script src="https://cdn.rawgit.com/BabylonJS/Babylon.js/bfbacb524c2431efc9649855180842038d1433f7/dist/preview%20release/babylon.max.js"></script> -->
+<!-- <script src="https://rawcdn.githack.com/BabylonJS/Babylon.js/v3.3.0/dist/preview%20release/babylon.max.js"></script> -->
 <script src="https://rawcdn.githack.com/BabylonJS/Babylon.js/v3.3.0/dist/preview%20release/babylon.max.js"></script>
 
 <canvas id="renderCanvas"></canvas>
