--- a/cx20/Ut6C/index.html
+++ b/cx20/Ut6C/index.html
@@ -15,10 +15,10 @@
 <canvas id="renderCanvas"></canvas>
 
 <!-- Oimo.js -->
-<script src="https://cdn.rawgit.com/BabylonJS/Babylon.js/bfbacb524c2431efc9649855180842038d1433f7/dist/preview%20release/Oimo.js"></script>
+<script src="https://rawcdn.githack.com/BabylonJS/Babylon.js/v3.3.0/dist/preview%20release/Oimo.js"></script>
 
 <!-- babylon.js v3.3 -->
-<script src="https://cdn.rawgit.com/BabylonJS/Babylon.js/bfbacb524c2431efc9649855180842038d1433f7/dist/preview%20release/babylon.max.js"></script>
+<script src="https://rawcdn.githack.com/BabylonJS/Babylon.js/v3.3.0/dist/preview%20release/babylon.max.js"></script>
 
 
 
