--- a/cx20/MNU4/index.html
+++ b/cx20/MNU4/index.html
@@ -13,8 +13,8 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 
-<script src="https://rawcdn.githack.com/cx20/gltf-test/aeae18583e4d3695744f98661314fd0249c82736/libs/playcanvas/v1.25.0-dev/playcanvas-latest.js"></script>
-<script src="https://rawcdn.githack.com/cx20/gltf-test/aeae18583e4d3695744f98661314fd0249c82736/libs/playcanvas/v1.25.0-dev/playcanvas-gltf.js"></script>
+<!-- playcanvas.js -->
+<script src="https://cx20.github.io/gltf-test/libs/playcanvas/v1.27.0-dev/playcanvas-latest.js"></script>
 
 <!-- The canvas element -->
 <canvas id="application"></canvas>
