--- a/cx20/2wmD/index.html
+++ b/cx20/2wmD/index.html
@@ -13,7 +13,8 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 
-<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/playcanvas/v1.9.0-dev/playcanvas-latest.js"></script>
+<!-- playcanvas.js -->
+<script src="https://cx20.github.io/gltf-test/libs/playcanvas/v1.27.0-dev/playcanvas-latest.js"></script>
 
 <script id="vs" type="x-shader/x-vertex">
 attribute vec3 aPosition;
