--- a/cx20/dha5/index.html
+++ b/cx20/dha5/index.html
@@ -29,8 +29,7 @@ vec3 hsv(float h, float s, float v){
 void main()
 {
     vec3 p = position;
-    //vColor = vec4(p.x+0.5, p.y+0.5, p.z*5.0, 1.0); // 座標位置に応じて色付け
-    vColor = vec4(hsv(p.z * 3.0, 1.0, 1.0), 1.0); // 標高に応じて HSV で色付け
+    vColor = vec4(hsv(p.y * 3.0, 1.0, 1.0), 1.0); // 標高に応じて HSV で色付け
 
     gl_Position = matAxisX * matAxisY * vec4(p, 1.0);
     gl_PointSize = 1.0;
@@ -44,7 +43,6 @@ varying   vec4 vColor;
 void main()
 {
     gl_FragColor = vColor;
-    //gl_FragColor = vec4(0.0, 0.0, 1.0, 1.0);
 }
 </script>
 
