--- a/cx20/gu06/index.html
+++ b/cx20/gu06/index.html
@@ -28,8 +28,8 @@
 -->
 
 <!--
-<script src="https://cx20.github.io/gltf-test/libs/babylonjs/5.0.0dev/babylon.js"></script>
-<script src="https://cx20.github.io/gltf-test/libs/babylonjs/5.0.0dev/babylon.glTFFileLoader.js"></script>
+<script src="https://cx20.github.io/gltf-test/libs/babylonjs/5.0.0/babylon.js"></script>
+<script src="https://cx20.github.io/gltf-test/libs/babylonjs/5.0.0/babylon.glTFFileLoader.js"></script>
 -->
 
 
