--- a/cx20/oNe1/index.html
+++ b/cx20/oNe1/index.html
@@ -15,13 +15,13 @@
 <canvas id="renderCanvas"></canvas>
 
 <!--
-<script src="https://cx20.github.io/gltf-test/libs/babylonjs/5.0.0dev/babylon.js"></script>
-<script src="https://cx20.github.io/gltf-test/libs/babylonjs/5.0.0dev/babylonjs.loaders.js"></script>
-<script src="https://cx20.github.io/gltf-test/libs/babylonjs/5.0.0dev/babylon.glTF2Serializer.js"></script>
+<script src="https://cx20.github.io/gltf-test/libs/babylonjs/5.0.0/babylon.js"></script>
+<script src="https://cx20.github.io/gltf-test/libs/babylonjs/5.0.0/babylonjs.loaders.js"></script>
+<script src="https://cx20.github.io/gltf-test/libs/babylonjs/5.0.0/babylon.glTF2Serializer.js"></script>
 -->
-<script src="https://cx20.github.io/gltf-test/libs/babylonjs/5.0.0dev/babylon.js"></script>
-<script src="https://cx20.github.io/gltf-test/libs/babylonjs/5.0.0dev/babylonjs.loaders.js"></script>
-<script src="https://cx20.github.io/gltf-test/libs/babylonjs/5.0.0dev/babylon.glTF2Serializer.js"></script>
+<script src="https://cx20.github.io/gltf-test/libs/babylonjs/5.0.0/babylon.js"></script>
+<script src="https://cx20.github.io/gltf-test/libs/babylonjs/5.0.0/babylonjs.loaders.js"></script>
+<script src="https://cx20.github.io/gltf-test/libs/babylonjs/5.0.0/babylon.glTF2Serializer.js"></script>
 
 
 <script type="text/javascript" src="index.js"></script>
