--- a/cx20/5lSK/index.html
+++ b/cx20/5lSK/index.html
@@ -17,7 +17,7 @@
 <script src="../../assets/t/k/Z/Y/tkZY3.js"></script>
 
 <!-- babylon.js v2.0 -->
-<script src="https://rawcdn.githack.com/BabylonJS/Babylon.js/v4.0.0/dist/previous%20releases/babylon.2.0.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/babylonjs/2.0.3/babylon.js"></script>
 
 <canvas id="renderCanvas"></canvas>
 
