--- a/cx20/aGqk/index.html
+++ b/cx20/aGqk/index.html
@@ -15,7 +15,7 @@
 <canvas id="renderCanvas"></canvas>
 
 <!-- babylon.js v3.1 -->
-<script src="https://rawcdn.githack.com/cx20/gltf-test/08f35fd423b432a87b22679bdda11365b5d1ac22/libs/babylonjs/3.1.0dev/babylon.max.js"></script>
+<script src="https://cx20.github.io/gltf-test/libs/babylonjs/6.6.1/babylon.js"></script>
 
 <!-- babylon.glTFFileLoader.js -->
 <script src="https://cx20.github.io/gltf-test/libs/babylonjs/6.6.1/babylonjs.loaders.js"></script>
