--- a/cx20/4QOn/index.html
+++ b/cx20/4QOn/index.html
@@ -15,7 +15,7 @@
 <!-- glMatrix-2.3.1.js -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix.js"></script>
 <!-- Spector.js -->
-<script src="https://spectorcdn.babylonjs.com/spector.bundle.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/spectorjs@0.9.30/dist/spector.bundle.js"></script>
 
 <script id="vs" type="x-shader/x-vertex">#version 300 es
 in  vec3 position;
