--- a/cx20/s2ix/index.html
+++ b/cx20/s2ix/index.html
@@ -22,7 +22,7 @@
 }
 </script>
 <!-- Spector.js -->
-<script src="https://spectorcdn.babylonjs.com/spector.bundle.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/spectorjs@0.9.30/dist/spector.bundle.js"></script>
 
 <script id="vs" type="x-shader/x-vertex">
 attribute vec3 position;
