--- a/cx20/HappyNewYear2023/index.html
+++ b/cx20/HappyNewYear2023/index.html
@@ -14,9 +14,8 @@
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <canvas id="renderCanvas"></canvas>
 
-<script src="https://cx20.github.io/gltf-test/libs/babylonjs/7.54.0/babylon.js"></script>
-<script src="https://cx20.github.io/gltf-test/libs/babylonjs/7.54.0/babylonjs.loaders.js"></script>
-
+<script src="https://cx20.github.io/gltf-test/libs/babylonjs/dev/babylon.js"></script>
+<script src="https://cx20.github.io/gltf-test/libs/babylonjs/dev/babylonjs.loaders.js"></script>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
